{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 133,
  "lineage": "9934d4cb-f50f-ec72-278d-ecb97230d155",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02fd066b86800f60c",
            "arn": "arn:aws:ec2:us-east-1:762595429056:instance/i-0d2da65f909b795c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "demo-project-ec2-profile",
            "id": "i-0d2da65f909b795c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03d6b171e7ee47f9b"
              }
            ],
            "primary_network_interface_id": "eni-03d6b171e7ee47f9b",
            "private_dns": "ip-172-16-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.53",
            "public_dns": "ec2-100-55-60-65.compute-1.amazonaws.com",
            "public_ip": "100.55.60.65",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cf144667b7100bcc",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1ef3d082d86c3b6",
            "tags": {
              "Name": "demo-project-backend"
            },
            "tags_all": {
              "Name": "demo-project-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081b75b8557b50098"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "i-0d2da65f909b795c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.backend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02fd066b86800f60c",
            "arn": "arn:aws:ec2:us-east-1:762595429056:instance/i-085f6a3ebc831e9a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "demo-project-ec2-profile",
            "id": "i-085f6a3ebc831e9a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02a5565865eabed5f"
              }
            ],
            "primary_network_interface_id": "eni-02a5565865eabed5f",
            "private_dns": "ip-172-16-1-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.130",
            "public_dns": "ec2-54-89-106-172.compute-1.amazonaws.com",
            "public_ip": "54.89.106.172",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:762595429056:key/c27eef24-e913-4286-926b-6532a922452b",
                "throughput": 125,
                "volume_id": "vol-04dfcf81f9505e87c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1ef3d082d86c3b6",
            "tags": {
              "Name": "demo-project-frontend"
            },
            "tags_all": {
              "Name": "demo-project-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fc6b82f21e0ee2b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "i-085f6a3ebc831e9a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.frontend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:internet-gateway/igw-06952fd7c228bbca0",
            "id": "igw-06952fd7c228bbca0",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-igw"
            },
            "tags_all": {
              "Name": "demo-project-igw"
            },
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "igw-06952fd7c228bbca0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-frontend-alb/d30a53339a44c77a",
            "arn_suffix": "app/demo-project-frontend-alb/d30a53339a44c77a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-project-frontend-alb-1047906215.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-frontend-alb/d30a53339a44c77a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-project-frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0350bef9e1a62f3a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01100885a6dc5da8d"
              },
              {
                "subnet_id": "subnet-0b1ef3d082d86c3b6"
              }
            ],
            "subnets": [
              "subnet-01100885a6dc5da8d",
              "subnet-0b1ef3d082d86c3b6"
            ],
            "tags": {
              "Name": "demo-project-frontend-alb"
            },
            "tags_all": {
              "Name": "demo-project-frontend-alb"
            },
            "vpc_id": "vpc-0e1897ea540421fea",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-frontend-alb/d30a53339a44c77a"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:listener/app/demo-project-frontend-alb/d30a53339a44c77a/8e7691b9be0aaa36",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/e61f2b7e1c7c9161",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:762595429056:listener/app/demo-project-frontend-alb/d30a53339a44c77a/8e7691b9be0aaa36",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:loadbalancer/app/demo-project-frontend-alb/d30a53339a44c77a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:listener/app/demo-project-frontend-alb/d30a53339a44c77a/8e7691b9be0aaa36"
          },
          "dependencies": [
            "aws_lb.frontend_alb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/e61f2b7e1c7c9161",
            "arn_suffix": "targetgroup/demo-project-frontend-tg/e61f2b7e1c7c9161",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/e61f2b7e1c7c9161",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "demo-project-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "demo-project-frontend-tg"
            },
            "tags_all": {
              "Name": "demo-project-frontend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/e61f2b7e1c7c9161"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/e61f2b7e1c7c9161,i-085f6a3ebc831e9a4,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/e61f2b7e1c7c9161",
            "target_id": "i-085f6a3ebc831e9a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:762595429056:targetgroup/demo-project-frontend-tg/e61f2b7e1c7c9161",
            "target_id": "i-085f6a3ebc831e9a4"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.frontend",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.frontend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:route-table/rtb-0ad42f3e7d356aa6b",
            "id": "rtb-0ad42f3e7d356aa6b",
            "owner_id": "762595429056",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06952fd7c228bbca0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-project-public-rt"
            },
            "tags_all": {
              "Name": "demo-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtb-0ad42f3e7d356aa6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aac6aa2c5e101689",
            "region": "us-east-1",
            "route_table_id": "rtb-0ad42f3e7d356aa6b",
            "subnet_id": "subnet-0b1ef3d082d86c3b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtbassoc-0aac6aa2c5e101689",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078699405e9711c4a",
            "region": "us-east-1",
            "route_table_id": "rtb-0ad42f3e7d356aa6b",
            "subnet_id": "subnet-01100885a6dc5da8d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtbassoc-078699405e9711c4a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-0350bef9e1a62f3a5",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0350bef9e1a62f3a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-project-alb-sg",
            "name_prefix": "",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-alb-sg"
            },
            "tags_all": {
              "Name": "demo-project-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "sg-0350bef9e1a62f3a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-081b75b8557b50098",
            "description": "Security group for backend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081b75b8557b50098",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "demo-project-backend-sg",
            "name_prefix": "",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-backend-sg"
            },
            "tags_all": {
              "Name": "demo-project-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "sg-081b75b8557b50098",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:security-group/sg-04fc6b82f21e0ee2b",
            "description": "Security group for frontend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fc6b82f21e0ee2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-project-frontend-sg",
            "name_prefix": "",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-frontend-sg"
            },
            "tags_all": {
              "Name": "demo-project-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "sg-04fc6b82f21e0ee2b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-0589dc804b66c9bd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0589dc804b66c9bd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pv-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pv-sub-01"
            },
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-0589dc804b66c9bd6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-09892e7d649cdcbc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09892e7d649cdcbc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pv-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pv-sub-01"
            },
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-09892e7d649cdcbc7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-0b1ef3d082d86c3b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1ef3d082d86c3b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pb-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pb-sub-01"
            },
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-0b1ef3d082d86c3b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-01100885a6dc5da8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01100885a6dc5da8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pb-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pb-sub-01"
            },
            "vpc_id": "vpc-0e1897ea540421fea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-01100885a6dc5da8d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc/vpc-0e1897ea540421fea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-012e253697f49a805",
            "default_route_table_id": "rtb-058e94426dd4ad540",
            "default_security_group_id": "sg-0771470e4744b43c1",
            "dhcp_options_id": "dopt-015d302a35bf5e9c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1897ea540421fea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058e94426dd4ad540",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project"
            },
            "tags_all": {
              "Name": "demo-project"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "vpc-0e1897ea540421fea",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}